Se crea la sección de datos del cliente en una tabla

--- a/factura.html
+++ b/factura.html
@@ -32,5 +32,33 @@
             <td>compulago.st@gmail.com</td>
         </tr>
     </table>
+
+    <br>
+
+    <table class="tabla clientes"> <!-- Tabla para mostrar los datos del cliente -->
+        <tr>
+            <th colspan="2">Datos del Cliente</th> <!--Se crea el encabezado de la tabla, que contiene 2 columnas-->
+        </tr>
+        <tr>
+            <td>Nombre:</td>
+            <td>Carlos López</td>
+        </tr>
+        <tr>
+            <td>Dirección</td>
+            <td>Barrio Colinas Petroleras</td>
+        </tr>
+        <tr>
+            <td>Cédula/Ruc:</td>
+            <td>2154328794</td>
+        </tr>
+        <tr>
+            <td>Teléfono</td>
+            <td>0984265783</td>
+        </tr>
+        <tr>
+            <td>Correo:</td>
+            <td>carlos_l@gmail.com</td>
+        </tr>
+    </table>
 </body>
 </html>
