Se actualiza la sección de estilos, para dar una mejor apariencia a una factura, se pone las tablas dentro de un div

--- a/factura.html
+++ b/factura.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
+<div class="hoja-factura">
     <!--Datos de la empresa-->
     <table class="tabla_empresa"> <!--Se crea la tabla para mostrar los datos de la empresa-->
         <tr>
@@ -36,7 +36,7 @@
 
     <br>
 
-    <table class="tabla clientes"> <!-- Tabla para mostrar los datos del cliente -->
+    <table class="tabla_cliente"> <!-- Tabla para mostrar los datos del cliente -->
         <tr>
             <th colspan="2">Datos del Cliente</th> <!--Se crea el encabezado de la tabla, que contiene 2 columnas-->
         </tr>
@@ -61,5 +61,6 @@
             <td>carlos_l@gmail.com</td>
         </tr>
     </table>
+</div>
 </body>
 </html>
