--- a/factura.html
+++ b/factura.html
@@ -9,6 +9,10 @@
 <div class="hoja-factura">
     <!--Datos de la empresa-->
     <table class="tabla_empresa"> <!--Se crea la tabla para mostrar los datos de la empresa-->
+        <colgroup>
+        <col style="width: 30%;">
+        <col style="width: 70%;">
+        </colgroup>
         <tr>
             <th colspan="2">Datos de la Empresa</th> <!--Se crea el encabezado de la tabla, que contiene 2 columnas-->
         </tr>
@@ -37,6 +41,10 @@
     <br>
 
     <table class="tabla_cliente"> <!-- Tabla para mostrar los datos del cliente -->
+        <colgroup>
+        <col style="width: 30%;">
+        <col style="width: 70%;">
+        </colgroup>
         <tr>
             <th colspan="2">Datos del Cliente</th> <!--Se crea el encabezado de la tabla, que contiene 2 columnas-->
         </tr>
