Se agrega una sección mas de Total sin Iva, Iva 15%, Total a pagar, y se crea estilos para que parezca factura

--- a/factura.html
+++ b/factura.html
@@ -102,6 +102,27 @@
             <td>$45.00</td>
             <td>$45.00</td>
         </tr>
+
+        <!-- Fila de total sin IVA -->
+        <tr>
+            <td colspan="3" class="sin-borde"></td>
+            <td class="etiqueta-total">Total sin IVA:</td>
+            <td>$65.00</td>
+        </tr>
+
+        <!-- Fila de IVA -->
+        <tr>
+            <td colspan="3" class="sin-borde"></td>
+            <td class="etiqueta-total">IVA 15%:</td>
+            <td>$9.75</td>
+        </tr>
+
+        <!-- Fila de total con IVA -->
+        <tr>
+            <td colspan="3" class="sin-borde"></td>
+            <td class="etiqueta-total">Total a pagar:</td>
+            <td><strong>$74.75</strong></td>
+        </tr>
     </tbody>
 </table>
 </div>
