Se crea la tabla de información adicional, se da detalle de la forma de pago, observaciones, pie de pagina y pagina web, tambien se le agrega estilos

--- a/factura.html
+++ b/factura.html
@@ -125,6 +125,25 @@
         </tr>
     </tbody>
 </table>
+<br>
+
+<!-- Información adicional -->
+<table class="tabla_adicional">
+    <tr>
+        <th colspan="2">Información Adicional</th>
+    </tr>
+    <tr>
+        <td><strong>Forma de pago:</strong></td>
+        <td>Efectivo</td>
+    </tr>
+    <tr>
+        <td><strong>Observaciones:</strong></td>
+        <td>El cliente retiró el producto en tienda</td>
+    </tr>
+    <tr>
+        <td colspan="2" class="mensaje-final">Gracias por su compra. Visite nuestra web: www.compulago.com</td>
+    </tr>
+</table>
 </div>
 </body>
 </html>
