Se agrega el Titulo Factura dentro de la hoja factura

--- a/factura.html
+++ b/factura.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div class="hoja-factura">
+    
+    <h1 class="titulo-factura">Factura</h1>
+
     <!--Datos de la empresa-->
     <table class="tabla_empresa"> <!--Se crea la tabla para mostrar los datos de la empresa-->
         <colgroup> <!-- Establece el ancho fijo de las columnas -->
